; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb10_io.c_libusb_fill_interrupt_transfer.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb10_io.c_libusb_fill_interrupt_transfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libusb_transfer = type { i32, i32, i8*, i32*, i32, i32, i32, i32* }

@LIBUSB_TRANSFER_TYPE_INTERRUPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libusb_fill_interrupt_transfer(%struct.libusb_transfer* %0, i32* %1, i32 %2, i32* %3, i32 %4, i32 %5, i8* %6, i32 %7) #0 {
  %9 = alloca %struct.libusb_transfer*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  store %struct.libusb_transfer* %0, %struct.libusb_transfer** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i32 %7, i32* %16, align 4
  %17 = load i32*, i32** %10, align 8
  %18 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %19 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %18, i32 0, i32 7
  store i32* %17, i32** %19, align 8
  %20 = load i32, i32* %11, align 4
  %21 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %22 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %21, i32 0, i32 6
  store i32 %20, i32* %22, align 8
  %23 = load i32, i32* @LIBUSB_TRANSFER_TYPE_INTERRUPT, align 4
  %24 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %25 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %24, i32 0, i32 5
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %16, align 4
  %27 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %28 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %27, i32 0, i32 4
  store i32 %26, i32* %28, align 8
  %29 = load i32*, i32** %12, align 8
  %30 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %31 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %30, i32 0, i32 3
  store i32* %29, i32** %31, align 8
  %32 = load i32, i32* %13, align 4
  %33 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %34 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 8
  %35 = load i8*, i8** %15, align 8
  %36 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %37 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %36, i32 0, i32 2
  store i8* %35, i8** %37, align 8
  %38 = load i32, i32* %14, align 4
  %39 = load %struct.libusb_transfer*, %struct.libusb_transfer** %9, align 8
  %40 = getelementptr inbounds %struct.libusb_transfer, %struct.libusb_transfer* %39, i32 0, i32 1
  store i32 %38, i32* %40, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
